1.去掉多余菜单项 2.配置文件修改为使用最新电子交易结算柜员系统。 3.修改“BankCardReader”接口命名。 4.“MenuResAuthMgr”增加接口判断菜单项是否是本地菜单项（无需服务器端指定权限）。 5.修改“CLoginEdit”实现，去除“CAccountEdit”，“CPwdEdit”。 5.注册程序实例并检查是否已经存在运行中的实例，如果有则注册失败并退出，该机制用于防止多个程序实例同时运行。 6.加入“msvcr120.dll”以免某些电脑为安装此DLL导致加载OpenSSL-AEC-BCB DLL失败。

--- a/ETtradeClient/project/ETradeClient.props
+++ b/ETtradeClient/project/ETradeClient.props
@@ -27,6 +27,7 @@ xcopy /y $(ProjectDir)\ExLib\hardware\id_card_reader\*.dll $(OutputPath)
 xcopy /y $(ProjectDir)\ExLib\hardware\pin_pad\*.dll $(OutputPath)
 xcopy /y $(ProjectDir)\ExLib\hardware\pwd_machine\*.dll $(OutputPath)
 xcopy /y $(ProjectDir)\ExLib\openssl_aes_cbc\*.dll $(OutputPath)
+xcopy /y $(ProjectDir)\ExLib\mfc\*.dll $(OutputPath)
 xcopy /y/e/i $(ProjectDir)\Config\*.* $(OutputPath)\Config
 xcopy /y/e/i $(ProjectDir)\Resource\*.* $(OutputPath)\Resource
 rmdir $(OutputPath)\locales</Command>
