1. 添加办理副卡，卡片挂失与解挂功能 2. 从main_view_browser_handler 和 popup_browser_handler中独立处错误页面加载接口 3. 修改Toolbar图片显示bug问题 4. 修改部分代码风格问题

--- a/ETtradeClient/project/ETradeClient.vcxproj
+++ b/ETtradeClient/project/ETradeClient.vcxproj
@@ -105,6 +105,7 @@
     <ClInclude Include="ETradeClient\boost_patch\property_tree\json_parser_write.hpp" />
     <ClInclude Include="ETradeClient\browser\async_js_callback_handler.h" />
     <ClInclude Include="ETradeClient\browser\browser_app.h" />
+    <ClInclude Include="ETradeClient\browser\error_page.h" />
     <ClInclude Include="ETradeClient\browser\main_view_browser_handler.h" />
     <ClInclude Include="ETradeClient\browser\browser_util.h" />
     <ClInclude Include="ETradeClient\browser\embedded_browser.h" />
@@ -144,6 +145,7 @@
   <ItemGroup>
     <ClCompile Include="ETradeClient\browser\async_js_callback_handler.cpp" />
     <ClCompile Include="ETradeClient\browser\browser_app.cpp" />
+    <ClCompile Include="ETradeClient\browser\error_page.cpp" />
     <ClCompile Include="ETradeClient\browser\main_view_browser_handler.cpp" />
     <ClCompile Include="ETradeClient\browser\embedded_browser.cpp" />
     <ClCompile Include="ETradeClient\browser\render_delegate.cpp" />
